src/snapshots/squawk__parse__tests__alter_policy_stmt-2.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterPolicyStmt(
                    Object({
                        "policy_name": String(
                            "name",
                        ),
                        "roles": Array([
                            Object({
                                "RoleSpec": Object({
                                    "location": Number(
                                        35,
                                    ),
                                    "roletype": Number(
                                        3,
                                    ),
                                }),
                            }),
                        ]),
                        "table": Object({
                            "RangeVar": Object({
                                "inh": Bool(
                                    true,
                                ),
                                "location": Number(
                                    21,
                                ),
                                "relname": String(
                                    "table_name",
                                ),
                                "relpersistence": String(
                                    "p",
                                ),
                            }),
                        }),
                        "with_check": Object({
                            "A_Expr": Object({
                                "kind": Number(
                                    0,
                                ),
                                "lexpr": Object({
                                    "ColumnRef": Object({
                                        "fields": Array([
                                            Object({
                                                "String": Object({
                                                    "str": String(
                                                        "account_age",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "location": Number(
                                            54,
                                        ),
                                    }),
                                }),
                                "location": Number(
                                    66,
                                ),
                                "name": Array([
                                    Object({
                                        "String": Object({
                                            "str": String(
                                                ">",
                                            ),
                                        }),
                                    }),
                                ]),
                                "rexpr": Object({
                                    "A_Const": Object({
                                        "location": Number(
                                            68,
                                        ),
                                        "val": Object({
                                            "Integer": Object({
                                                "ival": Number(
                                                    10,
                                                ),
                                            }),
                                        }),
                                    }),
                                }),
                            }),
                        }),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    71,
                ),
            },
        ),
    ],
)
