src/snapshots/squawk__parse__tests__alter_role_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterRoleStmt(
                    Object({
                        "action": Number(
                            1,
                        ),
                        "options": Array([
                            Object({
                                "DefElem": Object({
                                    "arg": Object({
                                        "Integer": Object({
                                            "ival": Number(
                                                1,
                                            ),
                                        }),
                                    }),
                                    "defaction": Number(
                                        0,
                                    ),
                                    "defname": String(
                                        "createrole",
                                    ),
                                    "location": Number(
                                        19,
                                    ),
                                }),
                            }),
                            Object({
                                "DefElem": Object({
                                    "arg": Object({
                                        "Integer": Object({
                                            "ival": Number(
                                                1,
                                            ),
                                        }),
                                    }),
                                    "defaction": Number(
                                        0,
                                    ),
                                    "defname": String(
                                        "createdb",
                                    ),
                                    "location": Number(
                                        30,
                                    ),
                                }),
                            }),
                        ]),
                        "role": Object({
                            "RoleSpec": Object({
                                "location": Number(
                                    12,
                                ),
                                "rolename": String(
                                    "miriam",
                                ),
                                "roletype": Number(
                                    0,
                                ),
                            }),
                        }),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    38,
                ),
            },
        ),
    ],
)
